--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,7 @@ add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
 SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/install CACHE PATH "Installation path" FORCE)
 add_definitions(-DELAWIDGETTOOLS_LIBRARY)
-option(ELAWIDGETTOOLS_BUILD_STATIC_LIB "Build static library." OFF)
+option(ELAWIDGETTOOLS_BUILD_STATIC_LIB "Build static library." ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
